test/src/e2e_vm_tests/test_programs/should_fail/invalid_fully_qualified_type/src/main.sw
script;

dep foo;

struct Bar {
  baz: foo::foo::Foo
}

struct Bar2 {
  baz: foo::Foo
}

fn main() {
}
